--- a/readme
+++ b/readme
@@ -5,3 +5,8 @@
 <!-- Service 1 Attr -->
 <a href="https://www.flaticon.com/free-icons/barber-shop" title="barber shop icons">Barber shop icons created by Freepik - Flaticon</a>
 <a href="https://www.flaticon.com/free-icons/barbershop" title="barbershop icons">Barbershop icons created by Smashicons - Flaticon</a>
+
+<!-- About Section Photos  -->
+Photo by <a href="https://unsplash.com/@salaheregouane?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Salah Regouane</a> on <a href="https://unsplash.com/s/photos/barber?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+Photo by <a href="https://unsplash.com/@mostafa_meraji?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">mostafa meraji</a> on <a href="https://unsplash.com/s/photos/barber-sun?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+   
