<update> Updated side-by-side reverse imgs and local.less

--- a/readme
+++ b/readme
@@ -9,4 +9,9 @@
 <!-- About Section Photos  -->
 Photo by <a href="https://unsplash.com/@salaheregouane?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Salah Regouane</a> on <a href="https://unsplash.com/s/photos/barber?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 Photo by <a href="https://unsplash.com/@mostafa_meraji?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">mostafa meraji</a> on <a href="https://unsplash.com/s/photos/barber-sun?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-   
+
+
+<!-- Extra Content for Ranking -->
+
+Photo by <a href="https://unsplash.com/@hairspies?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Hair Spies</a> on <a href="https://unsplash.com/s/photos/barbers?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+  
