<update> Updated review card picture with flex

--- a/readme
+++ b/readme
@@ -18,4 +18,7 @@ Photo by <a href="https://unsplash.com/@hairspies?utm_source=unsplash&utm_medium
 
 <!-- Contact Imgs -->
 Photo by <a href="https://unsplash.com/@ninjason?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jason Leung</a> on <a href="https://unsplash.com/s/photos/barbers?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-  
+
+
+<!-- SVG - Review -->
+<a href="https://www.flaticon.com/free-icons/user" title="user icons">User icons created by Freepik - Flaticon</a>
