--- a/readme
+++ b/readme
@@ -25,3 +25,10 @@ Photo by <a href="https://unsplash.com/@ninjason?utm_source=unsplash&utm_medium=
 Photo by <a href="https://unsplash.com/@kp89_?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kirill
     Petropavlov</a> on <a
     href="https://unsplash.com/s/photos/motorbike?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+
+<!-- Images for Gallery -->
+
+Photo by <a
+    href="https://unsplash.com/@manthan0gajjar?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Manthan
+    Gajjar</a> on <a
+    href="https://unsplash.com/s/photos/mirro?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
