--- a/readme
+++ b/readme
@@ -1,3 +1,6 @@
+Below are the credits and references for all photos and Icons (SVG/PNG) used within the design of PRIME BARBERS Website. No credit is taken from PRIME or VenexCon for the taking or quality of the photos.
+
+
 //Photo by <a href="https://unsplash.com/@apothecary87?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Apothecary 87</a> on <a href="https://unsplash.com/s/photos/barber?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 //Photo by <a href="https://unsplash.com/@timmossholder?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Tim Mossholder</a> on <a href="https://unsplash.com/s/photos/barber?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 
@@ -12,7 +15,6 @@ Photo by <a href="https://unsplash.com/@mostafa_meraji?utm_source=unsplash&utm_m
 
 
 <!-- Extra Content for Ranking -->
-
 Photo by <a href="https://unsplash.com/@hairspies?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Hair Spies</a> on <a href="https://unsplash.com/s/photos/barbers?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 
 
